# silhouette

./: .flake8  .gitignore  pyproject.toml
app/: __init__.py  manage.py
app/api/: __init__.py  api.py  auth.py  exceptions.py  handlers.py  user.py  users.py
app/bot/: __init__.py  bot.py
app/bot/core/: __init__.py  main.py
app/bot/core/context_utils/: __init__.py  main.py
app/bot/core/handlers/: __init__.py  main.py
app/bot/core/handlers/admin/: __init__.py  main.py
app/bot/core/handlers/other/: __init__.py  commands.py  main.py
app/bot/core/handlers/user/: __init__.py  commands.py  main.py
app/bot/core/states/: __init__.py  main.py
app/bot/plugins/: __init__.py  filters.py  handlers.py  keyboards.py  middlewares.py
app/main/: urls.py
app/main/static/css/: style.css
app/main/static/css/main/: main.css
app/main/views/: __init__.py  main.py
app/silhouette/: asgi.py  urls.py  wsgi.py
app/silhouette/settings/: local.py  production.py  settings.py
app/silhouette_bot/: bot.py
app/static/css/: style.css
app/templates/: index.html
app/templates/main/: main.html
app/templates/user/: sing_in.html
app/user/: admin.py  api.py  urls.py
app/user/forms/: __init__.py  sing_in.py
app/user/models/: __init__.py  base_abc_user.py  base_user.py
app/user/serializers/: __init__.py  base_user_serializer.py
app/user/views/: __init__.py  base_user.py  sing_in.py  sing_out.py  user_signals.py
app/utils/: config.py
silhouette/silhouette/: wsgi.py
silhouette/silhouette/settings/: settings.py
silhouette/utils/: config.py
(+1 files in other folders)
